# rego-imager-readfile

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml  test_linux.yml  test_macos.yml  test_windows.yml
idl/: README.md
python/: .flake8  Makefile  README.md  pyproject.toml
python/examples/: read_rego_data.ipynb
python/rego_imager_readfile/: __init__.py  _rego.py
python/tests/test_suite/: test_read.py  test_version.py
python/tools/: bump_version.py
